--- a/Presentation/Views/Rankings/Index.cshtml
+++ b/Presentation/Views/Rankings/Index.cshtml
@@ -15,8 +15,9 @@
     <script defer
             type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script defer src="./index.js"></script>
+@*     <script defer src="./index.js"></script> *@
     <script defer src="~/Frontend/Common/functions/index.js"></script>
+    <script defer src="~/Frontend/js/Rankings.js"></script>
 </head>
 <body>
     <nav class="Navigation">
