--- a/Presentation/Views/Login/Index.cshtml
+++ b/Presentation/Views/Login/Index.cshtml
@@ -80,7 +80,7 @@
 
                 <div class="SendToCreateAccount">
                     <p>You Don't Have an account?</p>
-                    <a href="../CreateAccount/index.html">Go To Create Account</a>
+                    <a href="https://localhost:7145/CreateAccount">Go To Create Account</a>
                 </div>
             </div>
         </div>
