--- a/Presentation/Views/Artist_Detail/Index.cshtml
+++ b/Presentation/Views/Artist_Detail/Index.cshtml
@@ -86,7 +86,15 @@
                 </div>
             </div>
         </div>
-        <div class="NFT-Cards-Section"></div>
+        <div class="NFT-Cards-Section">
+
+            <div id="NoNFT_Message" style="display:inline;
+                 font-family: 'Space Mono'; font-size: 16px; font-weight: 400; text-align: right;
+                 line-height: 140%; text-transform: capitalize; color: #a259ff; width: 550px; ">
+                <p> This creator has no NFTs </p>
+            </div>
+
+        </div>
 
         <div class="Loader">
             <div class="lds-facebook">
