--- a/Presentation/Views/Home/index.cshtml
+++ b/Presentation/Views/Home/index.cshtml
@@ -230,6 +230,7 @@ NFT Marketplace</p>
     </section>
 
     <section id="DiscoverNFTs_Section">
+
       <div class="Section-HeadlineAndButton Container">
         <div class="Section-Headline Container">
           <h1>Discover More NFTs</h1>
@@ -240,8 +241,10 @@ NFT Marketplace</p>
           <p>See All</p>
         </button>
       </div>
+
       <div class="NFTCards-Row Cotainer">
-        <div class="NFTCard">
+
+@*         <div class="NFTCard">
           <div class="Image">
             <img src="~/Frontend/assets/images/NftCard-DistantGalaxy.png" />
           </div>
@@ -265,6 +268,7 @@ NFT Marketplace</p>
             </div>
           </div>
         </div>
+
         <div class="NFTCard">
           <div class="Image">
             <img src="~/Frontend/assets/images/NFTCard-LifeOnEdena.png" />
@@ -289,6 +293,7 @@ NFT Marketplace</p>
             </div>
           </div>
         </div>
+
         <div class="NFTCard">
           <div class="Image">
             <img src="~/Frontend/assets/images/NFTCard-AstroFiction.png" />
@@ -312,8 +317,10 @@ NFT Marketplace</p>
               </div>
             </div>
           </div>
-        </div>
+        </div> *@
+
       </div>
+
     </section>
 
     <section id="NFTHighlight_Section">
