--- a/Presentation/Views/Home/index.cshtml
+++ b/Presentation/Views/Home/index.cshtml
@@ -37,6 +37,7 @@
           <a id="ConnectAWallet" href="#">Connect a wallet</a>
           <button class="SignUp-Btn">
             <img src="~/Frontend/assets/icons/User.svg" />
+            @* <input name="__RequestVerificationToken" type="hidden" value="@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken" /> *@
             <p>Sign Up</p>
           </button>
         </div>
